# hotline

./: README.md
core/: Cargo.toml
core/src/: client_backend.rs  lib.rs  serializable_colours.rs  server_backend.rs  types.rs
hotline/: Cargo.toml
hotline-client/: Cargo.toml
hotline-client/src/: main.rs
hotline-server/: Cargo.toml
hotline-server/src/: main.rs
hotline-tui/: Cargo.toml
hotline-tui/src/: main.rs
hotline-tui/src/chat_client_tui/: imports.rs  mod.rs  utils.rs
hotline-tui/src/chat_server_tui/: imports.rs  mod.rs  utils.rs
hotline-tui/src/shared/: mod.rs  shared_imports.rs
hotline-tui/src/start_tui/: imports.rs  mod.rs
hotline/src/: main.rs
hotline/src/client/: mod.rs
hotline/src/server/: mod.rs
hotline/src/shared/: config.rs  mod.rs  types.rs
old/hotline-client/: Cargo.toml
old/hotline-client/src/: main.rs
old/hotline-server/: Cargo.toml
old/hotline-server/src/: main.rs
