[package]
name = "hotline-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
cursive = "0.21"
anyhow = "1.0"
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
colored = "3.0.0"
core = { path = "../core" }