[package]
name = "hotline-server"
version = "0.1.0"
edition = "2024"
authors = ["Arun Nats arunnats.com"]

[package.metadata.deb]
maintainer = "Arun Nats arunnats.com"
depends = ""
extended-description = """TCP cmd-line chat server in Rust."""
assets = [
  ["target/release/hotline-server", "usr/bin/hotline-server", "755"],
]

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"